...tbds:  - update testthat for validation_kproto (type argument)
          - try to remember why has there been clprofiles and not plot.kproto so far? (...x argument for keep.data = F? ) 
				  - check .Rd file
				  
          - check NA treatment (argument + remove of NAs, ln 133ff + are they ignored if na.rm=F?)
	        - update validation_kproto


clustMixType_0.3-4  2022-12-04  - plot.kproto added (wrapper aorund clprofiles). 

clustMixType_0.3-3  2022-12-04  - predict.kproto extended to data frame with only one obs. (ln.495, suggestd by G.Terziysky).
                                - additional $stdization element returned by kproto_gower() for further use in predict function.
                                - predict.kproto() for type = "gower" changed (now uses standardization from training data.

clustMixType_0.3-2  2022-11-19  - example added to .Rd     
				                        - commented chunks removed
                                - some tests for gower extension added
                                - error check in validation_kproto() ln. 972f as long as if it is not implemented for type == "gower"

clustMixType_0.3-1  2022-11-13  - kproto_gower.R added (internally called by kproto)    (...not built --> v0.3-2)
                                - impacts on kproto (new type argument), print.kproto and predict.kproto 

clustMixType_0.2-15 2021-08-16  - validation_kproto: bug fix for special case of variable selection by lambda for no mixed-type data
                                - few minor bug fixes for special cases with missing values
clustMixType_0.2-14 2021-07-14  - bug fix of bug fix (ln.202): check for lambda == 0 only if length(lambda) == 1 (otherwise error for is.null(lambda))  
clustMixType_0.2-13 2021-07-09  - bug fix for special case of variable selection by lambda for no mixed-type data; validation_kproto will follows shortly