@@ -1,6 +1,6 @@
 Package: clustMixType
-Version: 0.3-4
-Date: 2022-12-04
+Version: 0.3-5
+Date: 2022-12-06
 Title: k-Prototypes Clustering for Mixed Variable-Type Data
 Author: Gero Szepannek [aut, cre], Rabea Aschenbruck [aut]
 Maintainer: Gero Szepannek <gero.szepannek@web.de>
